# fred_podplayer_tui

./: .env  .gitignore  Cargo.toml  README.md  config.json  curl.txt  poddb.db
migrations/2022-03-11-085035_create_pods/: down.sql  up.sql
migrations/2022-03-12-091709_create_episodes/: down.sql  up.sql
migrations/2022-03-12-095607_episodes_local_filepath/: down.sql  up.sql
migrations/2022-03-12-104427_episodes_downloaded_flag/: down.sql  up.sql
migrations/2022-03-13-094434_pod_episode_relation/: down.sql  up.sql
migrations/2022-03-13-200242_pod_download_flag/: down.sql  up.sql
migrations/2022-03-13-203226_init/: down.sql  up.sql
src/: app.rs  lib.rs  main.rs  network.rs  player.rs
src/audio/: mod.rs  output.rs
src/db/: mod.rs  models.rs  schema.rs
