[package]
name = "fred_podplayer_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
tui = "*"
rss = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version= "1.0.136", features = ["derive"]}
tokio = { version = "1.14.1", features = ["full"] }
serde_json = "1.0"
error-chain = "*"
kira = { path="../kira/crates/kira/" }
symphonia = { version = "0.5", features = [ "aac", "alac", "mp3", "isomp4" ] }
