[package]
name = "fred_podplayer_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "*"
tui = "*"
rss = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version= "1.0.136", features = ["derive"]}
tokio = { version = "1.14.1", features = ["full"] }
serde_json = "1.0"
error-chain = "*"
kira = "0.8.3"
symphonia = { version = "0.5", features = [ "aac", "alac", "mp3", "isomp4" ] }
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.10"
unicode-width = "0.1"
