[package]
name = "fred_podplayer_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.22.1"
tui = "0.17.0"
rss = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version= "1.0.136", features = ["derive"]}
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0"
error-chain = "*"
kira = "0.8.3"
symphonia = { version = "0.5", features = [ "aac", "alac", "mp3", "isomp4" ] }
libsqlite3-sys = { version = ">=0.25.1, <0.27.0", optional = false, features = ["bundled"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
dotenv = "0.10"
unicode-width = "0.1"
html2text = "0.6.0"
